# Ingestflow

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
configs/: sample.yaml  sample_http.yaml  sample_http_post.yaml  sample_parquet.yaml
data/: sample_orders.csv
docs/: architecture.md  config_spec.md  project_overview.md  roadmap.md
docs/.ipynb_checkpoints/: config_spec-checkpoint.md
scripts/: dashboard_runs.py  generate_sample_parquet.py
src/core/: config.py  env_resolve.py  http_auth.py  http_hmac.py  logging_config.py  oauth2_client.py  run_summary_json.py
src/extractor/: csv_extractor.py  dispatcher.py  http_extractor.py  parquet_extractor.py  postgres_extractor.py
src/loader/: duckdb_loader.py  incremental_state.py
tests/: conftest.py  test_cli_argv.py  test_config_validation.py  test_env_resolve.py  test_extractor_dispatcher.py  test_http_env_auth.py  test_http_extractor.py  test_http_hmac.py  test_incremental_state.py  test_integration_http_auth_pipeline.py  test_integration_http_pipeline.py  test_integration_incremental.py  test_integration_pipeline.py  test_integration_postgres.py  test_main_pipeline.py  test_main_source_label.py  test_oauth2_client.py  test_parquet_extractor.py  test_postgres_extractor.py  test_run_queries.py  test_run_summary_json.py  test_runs_list_format.py  test_sample_parquet_generator.py  test_validator.py
(+5 files in other folders)
