[project]
name = "ingestflow"
version = "0.1.0"
description = "Config-driven data ingestion into DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas",
    "pyyaml",
    "duckdb",
    "pyarrow",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
ingestflow = "main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Pyflakes only for CI — catches unused imports / undefined names without reformatting the repo.
select = ["F"]

[tool.coverage.run]
branch = true
source = ["src", "main.py"]
relative_files = true

[tool.coverage.report]
skip_empty = true
show_missing = true
